Fixed display issue

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="calc">
 			<div class="row">
 				<div class="col-md-12">
-					<div id="display">0</input>
+					<div id="display"></input>
 				</div>
 			</div>
 			<div class="row">
@@ -65,7 +65,7 @@
 					<button class="btn btn-default" value="2">2</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" value="3">1</button>
+					<button class="btn btn-default" value="3">3</button>
 				</div>
 				<div class="col-md-3">
 					<button class="btn btn-default" value="=">=</button>
