Styling buttons, added zero button

--- a/index.html
+++ b/index.html
@@ -17,20 +17,6 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3">
-					<button class="btn btn-default" value="clear">C</button>
-				</div>
-				<div class="col-md-3">
-					<button class="btn btn-default" value="/">/</button>
-				</div>
-				<div class="col-md-3">
-					<button class="btn btn-default" value="*">X</button>
-				</div>
-				<div class="col-md-3">
-					<button class="btn btn-default" value="on" id="onbutton">On</button>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3">
 					<button class="btn btn-default" value="7">7</button>
 				</div>
 				<div class="col-md-3">
@@ -40,7 +26,7 @@
 					<button class="btn btn-default" value="9">9</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" value="-">-</button>
+					<button class="btn btn-default" value="+">+</button>
 				</div>
 			</div>
 			<div class="row">
@@ -54,7 +40,7 @@
 					<button class="btn btn-default" value="6">6</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" value="+">+</button>
+					<button class="btn btn-default" value="-">-</button>
 				</div>
 			</div>
 			<div class="row">
@@ -69,6 +55,20 @@
 				</div>
 				<div class="col-md-3">
 					<button class="btn btn-default" value="=">=</button>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3">
+					<button class="btn btn-default" value="0">0</button>
+				</div>
+				<div class="col-md-3">
+					<button class="btn btn-default" value="clear">C</button>
+				</div>
+				<div class="col-md-3">
+					<button class="btn btn-default" value="/">/</button>
+				</div>
+				<div class="col-md-3">
+					<button class="btn btn-default" value="*">X</button>
 				</div>
 			</div>
 		</div>
