--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3">
-					<button class="btn btn-default" value="7">7</button>
+					<button class="btn btn-default" id="7" value="7">7</button>
 				</div>
 				<div class="col-md-3">
 					<button class="btn btn-default" value="8">8</button>
