Adding display functionality

--- a/index.html
+++ b/index.html
@@ -20,55 +20,55 @@
 					<button class="btn btn-default" id="7" value="7">7</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" value="8">8</button>
+					<button class="btn btn-default" id="8" value="8">8</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" value="9">9</button>
+					<button class="btn btn-default" id="9" value="9">9</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" value="+">+</button>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3">
-					<button class="btn btn-default" value="4">4</button>
-				</div>
-				<div class="col-md-3">
-					<button class="btn btn-default" value="5">5</button>
-				</div>
-				<div class="col-md-3">
-					<button class="btn btn-default" value="6">6</button>
-				</div>
-				<div class="col-md-3">
-					<button class="btn btn-default" value="-">-</button>
+					<button class="btn btn-default" id="+" value="+">+</button>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3">
-					<button class="btn btn-default" value="1">1</button>
+					<button class="btn btn-default" id="4" value="4">4</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" value="2">2</button>
+					<button class="btn btn-default" id="5" value="5">5</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" value="3">3</button>
+					<button class="btn btn-default" id="6" value="6">6</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" value="=">=</button>
+					<button class="btn btn-default" id="-" value="-">-</button>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3">
-					<button class="btn btn-default" value="0">0</button>
+					<button class="btn btn-default" id="1" value="1">1</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" value="clear">C</button>
+					<button class="btn btn-default" id="2" value="2">2</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" value="/">/</button>
+					<button class="btn btn-default" id="3" value="3">3</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" value="*">X</button>
+					<button class="btn btn-default" id="=" value="=">=</button>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3">
+					<button class="btn btn-default" id="0" value="0">0</button>
+				</div>
+				<div class="col-md-3">
+					<button class="btn btn-default" id="clear" value="clear">C</button>
+				</div>
+				<div class="col-md-3">
+					<button class="btn btn-default" id="/" value="/">/</button>
+				</div>
+				<div class="col-md-3">
+					<button class="btn btn-default" id="*" value="*">X</button>
 				</div>
 			</div>
 		</div>
