--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<button class="btn btn-default" id="0" value="0">0</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default" id="clear" value="clear">C</button>
+					<button class="btn btn-default" id="10" value="10">C</button>
 				</div>
 				<div class="col-md-3">
 					<button class="btn btn-default" id="/" value="/">/</button>
