Working on calc.equals function

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<button class="btn btn-default num" id="3" value="3">3</button>
 				</div>
 				<div class="col-md-3">
-					<button class="btn btn-default equals" id="=" value="=">=</button>
+					<button class="btn btn-default equals" id="equals" value="=">=</button>
 				</div>
 			</div>
 			<div class="row">
